# mcscratchy

./: Cargo.toml  README.md  Scratch Project.sb3
script-inspector/: Cargo.toml
script-inspector/src/: main.rs
src/: export.rs  lib.rs  opcode.rs  resource.rs  uid.rs  utils.rs
src/block/: event.rs  mod.rs  motion.rs  operator.rs
src/project/: asset.rs  file.rs  file_manager.rs  mod.rs  resource.rs  script.rs  target.rs  target_builder.rs
src/scripting/: arg.rs  blocks.rs  control.rs  event.rs  if_else_builder.rs  mod.rs  motion.rs  operator.rs  script_builder.rs  typed_blocks.rs  typed_script_builder.rs
src/scripting/blocks/: control.rs  data.rs  event.rs  looks.rs  mod.rs  motion.rs  operator.rs  sensing.rs  sound.rs  variable.rs
src/typed_scripting/: arg.rs  blocks.rs  if_else_chain_builder.rs  mod.rs  script_builder.rs
