[package]
name = "mcscratchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "script-inspector"
]

[dependencies]
lazy_static = "1.4.0"
md5 = "0.7.0"
rand = "0.8.5"
rs-sb3 = { git = "https://github.com/Multirious/rs-sb3" }
serde_json = "1.0.91"
zip = "0.6.3"
