[package]
name = "script-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0"
rs-sb3 = { git = "https://github.com/Multirious/rs-sb3" }
rand = "0.8.5"
zip = "0.6.3"
serde_json = "1.0.91"
toml = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
